all that's left is fixing the close button in dark mode

--- a/css/bootstrap-toast.css
+++ b/css/bootstrap-toast.css
@@ -1,10 +1,10 @@
 /**
- * Copyright (c) 2020 Peyton Gasink
+ * Copyright (c) 2021 Peyton Gasink
  * Distributed under MIT License.
 
  * This file contains all the styling for the toasts. It may cause
  * conflicting styles if simultaneously using Bootstrap toasts not generated by
- * bootstrap-toast.js, which is not recommended.
+ * Bootstrap Toaster, which is not recommended.
  */
 
 .status-icon {
@@ -30,10 +30,6 @@
     scrollbar-width: none;
     /* Render in front of Bootstrap toasts */
     z-index: 1060;
-}
-
-.toast:last-child {
-    margin-bottom: 1.5rem;
 }
 
 /* Hide scrollbar in all webkit-based browsers. */
